objects/agf__ADM_Case__c.object
<CustomObject>
    <fields>
        <fullName>agf__Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Account_Id__c , agf__Account_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Stage__c</fullName>
        <label>Account Stage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Created_Date__c</fullName>
        <label>Case Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Case_ID_Set__c</fullName>
        <label>Case ID Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner_ID__c</fullName>
        <label>Case Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Case_Owner_ID__c , agf__Case_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Subject_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Case_ID__c , agf__Case_Subject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Cases_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp;  agf__Case_ID__c , agf__Case_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Id__c</fullName>
        <label>Parent Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Parent_Account_Id__c , agf__Parent_Account_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Name__c</fullName>
        <label>Parent Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>Work62OrgCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>62 Org Case</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Case_Number__c</columns>
        <columns>agf__Work__c</columns>
        <columns>NAME</columns>
        <columns>agf__External_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>agf__Account_Id__c</columns>
        <columns>agf__Parent_Account_Id__c</columns>
        <columns>agf__Case_Owner_ID__c</columns>
        <columns>agf__Case_Owner_Link__c</columns>
        <columns>agf__Cases_Link__c</columns>
        <columns>agf__Case_Subject_Link__c</columns>
        <columns>agf__Account_Link__c</columns>
        <columns>agf__Parent_Account_Link__c</columns>
        <columns>agf__Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Related Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>62 Org Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>